--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -74,7 +74,6 @@
       <artifactId>spark-repl_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
     </dependency>
-
     <!--
       Because we don't shade dependencies anymore, we need to restore Guava to compile scope so
       that the libraries Spark depend on have it available. We'll package the version that Spark
@@ -84,6 +83,13 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <scope>${hadoop.deps.scope}</scope>
+    </dependency>
+    <dependency>
+      <groupId>yahoo.yinst.hcat_common</groupId>
+      <artifactId>hcatalog-support</artifactId>
+      <version>${hive.version}</version>
+      <type>jar</type>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 
