--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -90,6 +90,12 @@
       <version>1.2.1.8.1604270032</version>
       <type>jar</type>
       <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-hdfs</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
