--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -95,6 +95,10 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-hdfs</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>com.sun.jersey</groupId>
+          <artifactId>jersey-core</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
   </dependencies>
