modified:   core/src/main/scala/org/apache/spark/deploy/SparkSubmit.scala 	modified:   core/src/main/scala/org/apache/spark/scheduler/ShuffleMapStage.scala 	modified:   core/src/main/scala/org/apache/spark/util/ExternalSizeEstimator.scala 	modified:   core/src/main/scala/org/apache/spark/util/SizeEstimator.scala 	modified:   core/src/test/scala/org/apache/spark/MapOutputTrackerSuite.scala 	modified:   core/src/test/scala/org/apache/spark/deploy/history/HistoryServerSuite.scala 	modified:   core/src/test/scala/org/apache/spark/scheduler/DAGSchedulerSuite.scala 	modified:   core/src/test/scala/org/apache/spark/util/SizeEstimatorSuite.scala 	modified:   pom.xml 	modified:   sql/catalyst/src/test/scala/org/apache/spark/sql/catalyst/expressions/aggregate/ApproximatePercentileSuite.scala

--- a/pom.xml
+++ b/pom.xml
@@ -2055,6 +2055,10 @@
               <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
               <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
               <spark.memory.debugFill>true</spark.memory.debugFill>
+              <spark.authenticate>false</spark.authenticate>
+              <spark.ui.acls.enable>false</spark.ui.acls.enable>
+              <spark.dynamicAllocation.enabled>false</spark.dynamicAllocation.enabled>
+              <spark.shuffle.service.enabled>false</spark.shuffle.service.enabled>
               <!-- Needed by sql/hive tests. -->
               <test.src.tables>src</test.src.tables>
             </systemProperties>
@@ -2103,6 +2107,10 @@
               <spark.ui.enabled>false</spark.ui.enabled>
               <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
               <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
+              <spark.authenticate>false</spark.authenticate>
+              <spark.ui.acls.enable>false</spark.ui.acls.enable>
+              <spark.dynamicAllocation.enabled>false</spark.dynamicAllocation.enabled>
+              <spark.shuffle.service.enabled>false</spark.shuffle.service.enabled>
               <!-- Needed by sql/hive tests. -->
               <test.src.tables>__not_used__</test.src.tables>
             </systemProperties>
